--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="450sp"
+        android:layout_height="wrap_content"
         android:text="Hello World!"
         android:gravity="center"
-        android:layout_gravity="center"
         android:textSize="35sp"
+        android:layout_marginTop="90sp"
         android:textStyle="bold"
         android:textColor="#2196F3"
      />
@@ -49,8 +50,7 @@
                 android:layout_margin="10sp"
                 />
         </LinearLayout>
-
-    <LinearLayout
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -122,6 +122,77 @@
                 android:text="Slide Down"
                 android:layout_margin="10sp"
                 />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/slide_from_left"
+                android:layout_width="150sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Slide From Left"
+                android:layout_margin="10sp" />
+
+            <Button
+                android:id="@+id/slide_from_right"
+                android:layout_width="150sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Slide From Right"
+                android:layout_margin="10sp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/slide_left"
+                android:layout_width="150sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Slide Left"
+                android:layout_margin="10sp" />
+
+            <Button
+                android:id="@+id/slide_right"
+                android:layout_width="150sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Slide Right"
+                android:layout_margin="10sp" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/slide_to_left"
+                android:layout_width="150sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Slide To Left"
+                android:layout_margin="10sp" />
+
+            <Button
+                android:id="@+id/slide_to_right"
+                android:layout_width="150sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Slide To Right"
+                android:layout_margin="10sp" />
+
         </LinearLayout>
 
     </LinearLayout>
